force-app/main/default/objects/Opportunity/fields/Approval_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Approval_Feedback__c</fullName>
    <inlineHelpText>Any comments from Credit Manager and above</inlineHelpText>
    <label>Approval Feedback</label>
    <length>250</length>
    <type>Text</type>
</CustomField>