force-app/main/default/objects/Opportunity/fields/Business_Summary__c.field-meta.xml
<CustomField>
    <fullName>Business_Summary__c</fullName>
    <label>Business Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>