force-app/main/default/objects/Opportunity/fields/Contact_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_1__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>