force-app/main/default/objects/Opportunity/fields/Engagement_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Interaction</label>
    <referenceTo>EngagementInteraction</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>