force-app/main/default/objects/Opportunity/fields/FINS_Agency_Broker__c.field-meta.xml
<CustomField>
    <fullName>FINS_Agency_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency/Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Agency/Broker)</relationshipLabel>
    <relationshipName>Opportunities_Agency_Broker</relationshipName>
    <type>Lookup</type>
</CustomField>