force-app/main/default/objects/Opportunity/fields/FINS_Application_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>FINS_Application_Received_Date__c</fullName>
    <label>Application Received Date</label>
    <type>DateTime</type>
</CustomField>