force-app/main/default/objects/Opportunity/fields/FINS_Average_Client_Age__c.field-meta.xml
<CustomField>
    <fullName>FINS_Average_Client_Age__c</fullName>
    <label>Average Client Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>