force-app/main/default/objects/Opportunity/fields/FINS_Boosting_Reason__c.field-meta.xml
<CustomField>
    <fullName>FINS_Boosting_Reason__c</fullName>
    <inlineHelpText>Select the reason why the opportunity is trending up.</inlineHelpText>
    <label>Einstein - Deal Boosting Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A higher than usual number of prospect participants</fullName>
            </value>
            <value>
                <fullName>An increase in email volume</fullName>
            </value>
            <value>
                <fullName>Emails content</fullName>
            </value>
            <value>
                <fullName>An increase in number of meetings</fullName>
            </value>
            <value>
                <fullName>A higher than usual number of internal participants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>