force-app/main/default/objects/Opportunity/fields/FINS_Borrower__c.field-meta.xml
<CustomField>
    <fullName>FINS_Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>