force-app/main/default/objects/Opportunity/fields/FINS_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>FINS_Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small/Select</fullName>
            </value>
            <value>
                <fullName>Middle Market</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>