force-app/main/default/objects/Opportunity/fields/FINS_Commercial_Banking_Close_Plan__c.field-meta.xml
<CustomField>
    <fullName>FINS_Commercial_Banking_Close_Plan__c</fullName>
    <description>IDO Commercial Banking Close Plan Quip Document</description>
    <label>Close Plan</label>
    <type>Url</type>
</CustomField>