force-app/main/default/objects/Opportunity/fields/FINS_Competitor_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>FINS_Competitor_Mentioned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to add the &apos;Competitor Mentioned&apos; insight to this oppty</inlineHelpText>
    <label>Einstein - Competitor Mentioned</label>
    <type>Checkbox</type>
</CustomField>