force-app/main/default/objects/Opportunity/fields/FINS_Competitor_they_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>FINS_Competitor_they_Mentioned__c</fullName>
    <inlineHelpText>What competitor did they mention?</inlineHelpText>
    <label>Einstein - Competitor they Mentioned</label>
    <length>30</length>
    <type>Text</type>
</CustomField>