force-app/main/default/objects/Opportunity/fields/FINS_Contact_to_email__c.field-meta.xml
<CustomField>
    <fullName>FINS_Contact_to_email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact to email</inlineHelpText>
    <label>Einstein - Contact to Email</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>