force-app/main/default/objects/Opportunity/fields/FINS_CRD__c.field-meta.xml
<CustomField>
    <fullName>FINS_CRD__c</fullName>
    <label>CRD #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>