force-app/main/default/objects/Opportunity/fields/FINS_Custodian__c.field-meta.xml
<CustomField>
    <fullName>FINS_Custodian__c</fullName>
    <label>Custodian</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schwab</fullName>
            </value>
            <value>
                <fullName>Fidelity</fullName>
            </value>
            <value>
                <fullName>Pershing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>