force-app/main/default/objects/Opportunity/fields/FINS_Deal_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>FINS_Deal_Approved_Date__c</fullName>
    <label>Deal Approved Date</label>
    <type>Date</type>
</CustomField>