force-app/main/default/objects/Opportunity/fields/FINS_Deal_boosting__c.field-meta.xml
<CustomField>
    <fullName>FINS_Deal_boosting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to add the &apos;Deal Boosting&apos; insight to this oppty</inlineHelpText>
    <label>Einstein - Deal Boosting</label>
    <type>Checkbox</type>
</CustomField>