force-app/main/default/objects/Opportunity/fields/FINS_Deal_Slowing__c.field-meta.xml
<CustomField>
    <fullName>FINS_Deal_Slowing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to add the &apos;Deal Slowing&apos; insight to this oppty</inlineHelpText>
    <label>Einstein - Deal Slowing</label>
    <type>Checkbox</type>
</CustomField>