force-app/main/default/objects/Opportunity/fields/FINS_Decision_Role__c.field-meta.xml
<CustomField>
    <fullName>FINS_Decision_Role__c</fullName>
    <description>Used for deal registration.</description>
    <label>Decision Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>