force-app/main/default/objects/Opportunity/fields/FINS_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>FINS_EBITDA__c</fullName>
    <label>EBITDA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>