force-app/main/default/objects/Opportunity/fields/FINS_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>FINS_Email_Body__c</fullName>
    <inlineHelpText>Body for email template</inlineHelpText>
    <label>Einstein - Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>