force-app/main/default/objects/Opportunity/fields/FINS_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>FINS_Email_Subject__c</fullName>
    <inlineHelpText>Subject for the email template</inlineHelpText>
    <label>Einstein - Email Subject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>