force-app/main/default/objects/Opportunity/fields/FINS_Exec_Briefing__c.field-meta.xml
<CustomField>
    <fullName>FINS_Exec_Briefing__c</fullName>
    <label>Exec Briefing</label>
    <type>Url</type>
</CustomField>