force-app/main/default/objects/Opportunity/fields/FINS_GP_Commitment__c.field-meta.xml
<CustomField>
    <fullName>FINS_GP_Commitment__c</fullName>
    <label>GP Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>