force-app/main/default/objects/Opportunity/fields/FINS_Initial_Pitch_Date__c.field-meta.xml
<CustomField>
    <fullName>FINS_Initial_Pitch_Date__c</fullName>
    <label>Initial Pitch Date</label>
    <type>Date</type>
</CustomField>