force-app/main/default/objects/Opportunity/fields/FINS_Insurance_PolicyCenter_Update__c.field-meta.xml
<CustomField>
    <fullName>FINS_Insurance_PolicyCenter_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PolicyCenter Update</label>
    <type>Checkbox</type>
</CustomField>