force-app/main/default/objects/Opportunity/fields/FINS_Insurance_Rating_State__c.field-meta.xml
<CustomField>
    <fullName>FINS_Insurance_Rating_State__c</fullName>
    <label>Rating State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>HI</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>KS</fullName>
            </value>
            <value>
                <fullName>KY</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>MN</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>NC</fullName>
            </value>
            <value>
                <fullName>ND</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>NH</fullName>
            </value>
            <value>
                <fullName>NJ</fullName>
            </value>
            <value>
                <fullName>NM</fullName>
            </value>
            <value>
                <fullName>NV</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>