force-app/main/default/objects/Opportunity/fields/FINS_Last_Activity_Subject__c.field-meta.xml
<CustomField>
    <fullName>FINS_Last_Activity_Subject__c</fullName>
    <inlineHelpText>Subject for the last activity in the insights</inlineHelpText>
    <label>Einstein - Last Activity Subject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>