force-app/main/default/objects/Opportunity/fields/FINS_Last_Activity_Text__c.field-meta.xml
<CustomField>
    <fullName>FINS_Last_Activity_Text__c</fullName>
    <inlineHelpText>Enter the text to be displayed with the last activity in the insight</inlineHelpText>
    <label>Einstein - Last Activity Text</label>
    <length>144</length>
    <type>Text</type>
</CustomField>