force-app/main/default/objects/Opportunity/fields/FINS_Last_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>FINS_Last_Activity_Type__c</fullName>
    <inlineHelpText>What was the last activity this insight tracked?</inlineHelpText>
    <label>Einstein - Last Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>