force-app/main/default/objects/Opportunity/fields/FINS_Lending_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>FINS_Lending_Approved_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approved Amount</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>