force-app/main/default/objects/Opportunity/fields/FINS_Lending_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>FINS_Lending_Interest_Rate__c</fullName>
    <defaultValue>0.18</defaultValue>
    <label>Interest Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>