force-app/main/default/objects/Opportunity/fields/FINS_Lending_Loan__c.field-meta.xml
<CustomField>
    <fullName>FINS_Lending_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>FINS_Lending_Loan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>