force-app/main/default/objects/Opportunity/fields/FINS_Lending_Max_Loan__c.field-meta.xml
<CustomField>
    <fullName>FINS_Lending_Max_Loan__c</fullName>
    <defaultValue>675000</defaultValue>
    <label>Max Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>