force-app/main/default/objects/Opportunity/fields/FINS_Lending_Type_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>FINS_Lending_Type_of_Loan__c</fullName>
    <label>Type of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Loan Against Property</fullName>
            </value>
            <value>
                <fullName>SME Loan</fullName>
            </value>
            <value>
                <fullName>Two Wheeler Loan</fullName>
                <label>Auto Loan</label>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>SBL</fullName>
                <label>Suvidha Loan</label>
            </value>
            <value>
                <fullName>Consumer Durable Loan</fullName>
            </value>
            <value>
                <fullName>Education Loan</fullName>
            </value>
            <value>
                <fullName>Gold Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>