force-app/main/default/objects/Opportunity/fields/FINS_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>FINS_LinkedIn__c</fullName>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>