force-app/main/default/objects/Opportunity/fields/FINS_Margin__c.field-meta.xml
<CustomField>
    <fullName>FINS_Margin__c</fullName>
    <label>Margin</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>