force-app/main/default/objects/Opportunity/fields/FINS_Name_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>FINS_Name_of_Contact__c</fullName>
    <inlineHelpText>Name of the contact who mentioned the competitor</inlineHelpText>
    <label>Einstein - Name of Contact</label>
    <length>25</length>
    <type>Text</type>
</CustomField>