force-app/main/default/objects/Opportunity/fields/FINS_No_Communication__c.field-meta.xml
<CustomField>
    <fullName>FINS_No_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to add the &apos;No Communication&apos; insight to this oppty</inlineHelpText>
    <label>Einstein - No Communication</label>
    <type>Checkbox</type>
</CustomField>