force-app/main/default/objects/Opportunity/fields/FINS_of_Households__c.field-meta.xml
<CustomField>
    <fullName>FINS_of_Households__c</fullName>
    <label># of Households</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>