force-app/main/default/objects/Opportunity/fields/FINS_P_E_Ratio__c.field-meta.xml
<CustomField>
    <fullName>FINS_P_E_Ratio__c</fullName>
    <label>P/E Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>