force-app/main/default/objects/Opportunity/fields/FINS_Phone__c.field-meta.xml
<CustomField>
    <fullName>FINS_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>