force-app/main/default/objects/Opportunity/fields/FINS_Private_Equity_NDA_Date__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_NDA_Date__c</fullName>
    <label>NDA Date</label>
    <type>Date</type>
</CustomField>