force-app/main/default/objects/Opportunity/fields/FINS_Project_Description__c.field-meta.xml
<CustomField>
    <fullName>FINS_Project_Description__c</fullName>
    <label>Project Description</label>
    <type>TextArea</type>
</CustomField>