force-app/main/default/objects/Opportunity/fields/FINS_Prospect_Unresponsive__c.field-meta.xml
<CustomField>
    <fullName>FINS_Prospect_Unresponsive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to display the &apos;prospect unresponsive&apos; insight on this oppty</inlineHelpText>
    <label>Einstein - Prospect Unresponsive</label>
    <type>Checkbox</type>
</CustomField>