force-app/main/default/objects/Opportunity/fields/FINS_Quote_Due_By__c.field-meta.xml
<CustomField>
    <fullName>FINS_Quote_Due_By__c</fullName>
    <label>Quote Due By</label>
    <type>Date</type>
</CustomField>