force-app/main/default/objects/Opportunity/fields/FINS_Re_engaged__c.field-meta.xml
<CustomField>
    <fullName>FINS_Re_engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Einstein - Re-engaged</label>
    <type>Checkbox</type>
</CustomField>