force-app/main/default/objects/Opportunity/fields/FINS_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>FINS_Renewal_Date__c</fullName>
    <description>Date of renewal</description>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>