force-app/main/default/objects/Opportunity/fields/FINS_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>FINS_Requested_Amount__c</fullName>
    <description>Amount of money for account, mortgage, retirement assets, loan, credit card or other financial services product.</description>
    <inlineHelpText>Amount of money for account, mortgage, retirement assets, loan, credit card or other financial services product.</inlineHelpText>
    <label>Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>