force-app/main/default/objects/Opportunity/fields/FINS_Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>FINS_Residence_Type__c</fullName>
    <label>Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Company Leased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>