force-app/main/default/objects/Opportunity/fields/FINS_Revenue_Frequency__c.field-meta.xml
<CustomField>
    <fullName>FINS_Revenue_Frequency__c</fullName>
    <description>Frequency of revenue</description>
    <label>Revenue Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>