force-app/main/default/objects/Opportunity/fields/FINS_Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>FINS_Revenue_Type__c</fullName>
    <description>Type of revenue</description>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New: Existing Client, New LoB</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>Renewal: Existing Client, Existing LoB</fullName>
            </value>
            <value>
                <fullName>Run-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>