force-app/main/default/objects/Opportunity/fields/FINS_Services_Discussed__c.field-meta.xml
<CustomField>
    <fullName>FINS_Services_Discussed__c</fullName>
    <description>Discussed services</description>
    <label>Services Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit Services</fullName>
            </value>
            <value>
                <fullName>Executive Risk/D&amp;O</fullName>
            </value>
            <value>
                <fullName>HR Consulting</fullName>
            </value>
            <value>
                <fullName>M&amp;A Advisory</fullName>
            </value>
            <value>
                <fullName>Risk Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>