force-app/main/default/objects/Opportunity/fields/FINS_Slowing_Reason__c.field-meta.xml
<CustomField>
    <fullName>FINS_Slowing_Reason__c</fullName>
    <label>Einstein - Deal Slowing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A decrease in email volume</fullName>
            </value>
            <value>
                <fullName>Emails content</fullName>
            </value>
            <value>
                <fullName>A decrease in number of meetings</fullName>
            </value>
            <value>
                <fullName>A lower than usual number of internal participants</fullName>
            </value>
            <value>
                <fullName>A lower than usual number of prospect participants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>