force-app/main/default/objects/Opportunity/fields/FINS_Task_Overdue__c.field-meta.xml
<CustomField>
    <fullName>FINS_Task_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Einstein - Task Overdue</label>
    <type>Checkbox</type>
</CustomField>