force-app/main/default/objects/Opportunity/fields/FINS_Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>FINS_Tech_Stack__c</fullName>
    <label>Tech Stack</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redtail</fullName>
            </value>
            <value>
                <fullName>Orion</fullName>
            </value>
            <value>
                <fullName>Moneyguide Pro</fullName>
            </value>
            <value>
                <fullName>Addepar</fullName>
            </value>
            <value>
                <fullName>Emoney</fullName>
            </value>
            <value>
                <fullName>Black Diamond</fullName>
            </value>
            <value>
                <fullName>Tamarac</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>