force-app/main/default/objects/Opportunity/fields/FINS_Time_Consuming_Oppty__c.field-meta.xml
<CustomField>
    <fullName>FINS_Time_Consuming_Oppty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Einstein - Time Consuming Oppty</label>
    <type>Checkbox</type>
</CustomField>