force-app/main/default/objects/Opportunity/fields/FINS_Total_AUM__c.field-meta.xml
<CustomField>
    <fullName>FINS_Total_AUM__c</fullName>
    <label>Total AUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>