force-app/main/default/objects/Opportunity/fields/FINS_Winning_Unlikely__c.field-meta.xml
<CustomField>
    <fullName>FINS_Winning_Unlikely__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Einstein - Winning Unlikely</label>
    <type>Checkbox</type>
</CustomField>