force-app/main/default/objects/Opportunity/fields/Managed_by__c.field-meta.xml
<CustomField>
    <fullName>Managed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed by</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Managed by)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>