force-app/main/default/objects/Opportunity/fields/Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Portfolio Manager)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>