force-app/main/default/objects/Opportunity/fields/Real_Estate_Agent__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Real Estate Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Real Estate Agent)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>