force-app/main/default/objects/Opportunity/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Relationship Manager)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>