force-app/main/default/objects/Opportunity/fields/Summary_of_Residential_Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Residential_Loan_Application__c</fullName>
    <label>Summary of Residential Loan Application</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>