force-app/main/default/objects/Opportunity/recordTypes/FINS_Advisor_Candidate_M_A.recordType-meta.xml
<RecordType>
    <fullName>FINS_Advisor_Candidate_M_A</fullName>
    <active>true</active>
    <businessProcess>Advisor Candidate - M%26A</businessProcess>
    <label>Advisor Candidate - M&amp;A</label>
</RecordType>