force-app/main/default/objects/Opportunity/recordTypes/FINS_CIB_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>FINS_CIB_Onboarding</fullName>
    <active>true</active>
    <businessProcess>Simple Sales Process</businessProcess>
    <label>Institutional Banking</label>
</RecordType>