force-app/main/default/objects/Opportunity/recordTypes/FINS_Commercial_Banking_Lending.recordType-meta.xml
<RecordType>
    <fullName>FINS_Commercial_Banking_Lending</fullName>
    <active>true</active>
    <businessProcess>FINS Commercial Lending</businessProcess>
    <description>Lending: Commercial Banking - Commercial Loan Opportunity</description>
    <label>Commercial Banking - Lending</label>
</RecordType>