force-app/main/default/objects/Opportunity/recordTypes/FINS_Commercial_Banking_Small_Business_Loan.recordType-meta.xml
<RecordType>
    <fullName>FINS_Commercial_Banking_Small_Business_Loan</fullName>
    <active>true</active>
    <businessProcess>FINS Commercial Banking - Small Business Loan</businessProcess>
    <label>Commercial Banking - Small Business Loan</label>
</RecordType>