force-app/main/default/objects/Opportunity/recordTypes/FINS_Commercial_Banking_Treasury_Management.recordType-meta.xml
<RecordType>
    <fullName>FINS_Commercial_Banking_Treasury_Management</fullName>
    <active>true</active>
    <businessProcess>Treasury</businessProcess>
    <description>Commercial Banking - Treasury Services OpportunitIy</description>
    <label>Commercial Banking - Treasury Management</label>
</RecordType>